Fix sidebar z-index when delete modal appear

--- a/src/Components/FilterBar/FilterBar.css
+++ b/src/Components/FilterBar/FilterBar.css
@@ -6,7 +6,7 @@
   border-bottom: 1px solid #959db3;
   position: fixed;
   top: 111px; 
-  z-index: 2500; 
+  z-index: 2400; 
   background: #f5f5f6;
   transition: opacity 0.3s ease, cursor 0.3s ease;
 }
