--- a/src/Components/ProductList/ProductList.css
+++ b/src/Components/ProductList/ProductList.css
@@ -107,7 +107,7 @@
 }
 
 .dropdown-menu {
-  z-index: 10;
+  z-index: 3900;
   position: absolute;
   background: #bdc2d2;
   right: 35px;
@@ -171,7 +171,7 @@
   background: #fff;
   width: 316px;
   height: 243px;
-  z-index: 3000;
+  z-index: 3950;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
   text-align: center;
   display: flex;
@@ -270,7 +270,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5); 
-  z-index: 1000;
+  z-index: 3900;
 }
 
 .action-popup {
@@ -278,7 +278,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1001;
+  z-index: 3950;
 }
 
 body.no-scroll {
